Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114986

Qml's typeregistrar is not parsing namespaces correctly

XMLWordPrintable

    • All
    • ad88383b4 (dev), 093e0ff78 (6.6)

      See the attached example (ignore the name, I reused an old project).

      The generated qmltypes do not contain the base class Foo unless the namespace is explicitly added when deriving Bar from Foo. (line 17 in testing.h)

      Tested with 6.6 and dev, both behave the same.

        For Gerrit Dashboard: QTBUG-114986
        # Subject Branch Project Status CR V

            ulherman Ulf Hermann
            rgriebl Robert Griebl
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes