qmltyperegistrar: Respect namespaces when generating qmltypes

qmltyperegistrar evaluates simple namespace hierarchies and
qualifications now. It does still not take into account extra names
introduced into a class scope via inheritance, using, typedef or the
like. Names introduced via inheritance would be possible to resolve
since we know the inheritance hierarchy. However, we better draw the
line at a simple boundary since without extensive support from moc we
won't be able to resolve names through typedefs or using declarations.

Fixes: QTBUG-114986
Change-Id: I4948a32f8ac1b6028bed72674eaedcb36b6d60e1
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit ad88383b467c411fc5d1bd6059110ca5697a88a8)