src/qmltyperegistrar/qqmltyperegistrar.cpp
@@ -251,9 +251,9 @@ void QmlTypeRegistrar::write(QTextStream &output)
                 if (className == targetName)
                     return true;
 
-                const QJsonObject *target = QmlTypesClassDescription::findType(m_types, targetName);
-                if (!target)
-                    target = QmlTypesClassDescription::findType(m_foreignTypes, targetName);
+                const QStringList namespaces = MetaTypesJsonProcessor::namespaces(classDef);
+                const QJsonObject *target = QmlTypesClassDescription::findType(
+                        m_types, m_foreignTypes, targetName, namespaces);
 
                 if (!target)
                     return false;
